--- a/package.json
+++ b/package.json
@@ -10,19 +10,33 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^7.0",
+        "@babel/preset-react": "^7.9.4",
+        "axios": "^0.18",
+        "cross-env": "^5.1",
+        "file-loader": "^4.2.0",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
+        "laravel-mix": "^4.0.7",
+        "lodash": "^4.17.5",
+        "popper.js": "^1.16.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-router": "^3.2.0",
+        "sass": "^1.23.3",
+        "sass-loader": "7.*",
+        "socket.io-client": "^2.3.0",
+        "stylus": "^0.54.7",
+        "stylus-loader": "^3.0.2",
+        "timers": "^0.1.1",
+        "url-loader": "^2.2.0",
+        "vivus": "^0.4.5",
+        "vue": "^2.6.10",
+        "vue-cropper": "^0.4.9",
+        "vue-picture-preview": "^1.3.0",
+        "vue-router": "^3.1.2",
+        "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.6.10",
-        "vuex": "^3.4.0"
+        "vuex": "^3.1.1",
+        "xss-filters-es6": "^1.0.0"
+    },
+    "dependencies": {
+        "muse-ui": "^3.0.2"
     }
 }
